# yid_langchain_extensions

./: .bumpversion.cfg  .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci_cd.yml  publish.yml  tests.yml  version_bump.yml
output_parser/: direct_parser.py  thoughts_and_tools_parser.py
tests/: test_agent.py  test_batches_client.py  test_parser.py  test_retrying_llm.py  test_thoughts_json_parser.py  test_tools_in_prompt_llm.py  test_tools_llm_with_thought.py  test_utils.py
tools/: utils.py
yid_langchain_extensions/: utils.py
yid_langchain_extensions/agent/: raw_output_agent_executor.py  simple_agent.py
yid_langchain_extensions/llm/: batches_openai_client.py  cot_tools_llm.py  retrying_llm.py  tools_in_prompt_llm.py  tools_llm_with_thought.py
yid_langchain_extensions/output_parser/: action_parser.py  class_parser.py  fixing_json_parser.py  pydantic_from_tool.py  stop_seq_output_parser.py  thoughts_json_parser.py  utils.py
yid_langchain_extensions/tools/: utils.py
