[build-system]
requires = ["setuptools>=67.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yid_langchain_extensions"
version = "0.7.5"
description = "Useful classes extending langchain library"
authors = [
    {name = "Dmitrii Rashchenko", email = "dimitree54@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain>=0.3,<0.4",
    "pydantic>=2",
    "jinja2>=3.1.2",
    "langchain-openai>=0.0.8",
    "langchainhub>=0.1.15",
    "openai>=1.27.0,<2.0.0",
    "langchain-community>=0.0.27",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "setuptools>=67.8.0",
    "bump2version>=1.0.1",
    "flake8",
    "twine",
    "wheel",
    "pytest>=7.4.0",
    "pytest-xdist>=3.3.1",
    "build",
]

[project.urls]
Homepage = "https://github.com/dimitree54/yid_langchain_extensions"
Repository = "https://github.com/dimitree54/yid_langchain_extensions"

[tool.setuptools]
include-package-data = true
packages = { find = { include = ["yid_langchain_extensions*"] } }
